Fix partner logo sizes on mobile and desktop

--- a/src/assets/scss/core/sections/_clients.scss
+++ b/src/assets/scss/core/sections/_clients.scss
@@ -26,6 +26,13 @@
 	}
 }
 
+@include media( '<=medium' ) {
+
+  .partner-logo {
+    width: 110px;
+  }
+}
+
 @include media( '>medium' ) {
 
 	.clients {
